--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
     padding: 20px 1rem;
     background: var(--Davyblue);
     margin-bottom: 40%;
-    max-width: 15in;
+    width: 100%;
     z-index: 999;
 }
 
